crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_068_Sunsoft4_After_Burner_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-068-Sunsoft4/After Burner (Japan).zip
rom_sha256=1c83b702343a72fee73cca001ab2eb787312c4a3879f465daf3e45225a373c5f
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=06d45cc6a851f112
checkpoint f900 fb_fnv1a64=f87e9ee434889a28
checkpoint f1100 fb_fnv1a64=283a58a7bd3083f7
