crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_068_Sunsoft4_Nantettatte_Baseball_Nantettatte_Baseball_Ko_Game_Cassette_91_Kaimaku_Hen_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-068-Sunsoft4/Nantettatte!! Baseball + Nantettatte!! Baseball - Ko-Game Cassette - '91 Kaimaku Hen (Japan).zip
rom_sha256=e4ab608dac9229a1b8c19df5740595b493080c94552e3a1af905bdcc2acd1fca
frames=1141
fb_bytes=245760
cycles=33949964
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
