crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_069_FME7_Sunsoft5B_Barcode_World_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-069-FME7-Sunsoft5B/Barcode World (Japan).zip
rom_sha256=6a764dcb1479d23d518f58f48a64d1b1e4fb0b7278aec5f36a6e7ab7d03e8c51
frames=1141
fb_bytes=245760
cycles=33949778
audio_samples=836505
audio_fnv1a64=4296b2d226159d23
checkpoint f900 fb_fnv1a64=19deef7cf9299a41
checkpoint f1100 fb_fnv1a64=19deef7cf9299a41
