crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_069_FME7_Sunsoft5B_Batman_Return_of_the_Joker.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-069-FME7-Sunsoft5B/Batman - Return of the Joker.nes
rom_sha256=d51484ccad7607cc8a8405ae66b7bf11938a22715c221ce6efe83241b8ed12d6
frames=1141
fb_bytes=245760
cycles=33949797
audio_samples=836505
audio_fnv1a64=6142b76da6ad0de7
checkpoint f900 fb_fnv1a64=175f3d8f3ad235ed
checkpoint f1100 fb_fnv1a64=6018e82f54d75b8d
