crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_069_FME7_Sunsoft5B_Mr_Gimmick.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-069-FME7-Sunsoft5B/Mr. Gimmick.nes
rom_sha256=c228c24bb619aa340db2aebb789dd43a8136b3f3852e6be59656175700a738c8
frames=1141
fb_bytes=245760
cycles=37902151
audio_samples=1005322
audio_fnv1a64=133cef04a7cad5f0
checkpoint f900 fb_fnv1a64=190aff14bc3c5d26
checkpoint f1100 fb_fnv1a64=190aff14bc3c5d26
